# BriefGPT

./: README.md  basic_requirements.txt  chat_utils.py  local_app.py  local_chat_utils.py  main.py  my_prompts.py  pyproject.toml  streamlit_app_utils.py  summary_utils.py  test.env
tests/: pytest.ini  run_tests.sh  test_chat_utils.py  test_main.py
tests/.streamlit/: config.toml
tests/summaries/: example_summary.txt
