[project]
name = "briefgpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "coverage>=7.6.10",
    "faiss-cpu>=1.9.0.post1",
    "fuzzywuzzy>=0.18.0",
    "langchain==0.3.14",
    "langchain-community>=0.3.14",
    "matplotlib>=3.10.0",
    "nltk>=3.9.1",
    "openai==0.27.6",
    "orjson==3.10.6",
    "pypdf>=5.1.0",
    "pypdf2>=3.0.1",
    "pytest>=8.3.4",
    "scikit-learn>=1.6.1",
    "streamlit-chat>=0.1.1",
    "tiktoken>=0.8.0",
    "transformers>=4.48.0",
]
